--- a/packages/socket-server/Dockerfile
+++ b/packages/socket-server/Dockerfile
@@ -2,7 +2,7 @@ FROM arm64v8/node:18.18.2-alpine
 
 # Create app directory
 WORKDIR /socket
-ADD . /socket
+ADD . .
 
 # Install bun
 RUN npm install -g bun
