chore: clean up some files

--- a/packages/socket-server/Dockerfile
+++ b/packages/socket-server/Dockerfile
@@ -1,20 +1,8 @@
-FROM arm64v8/node:18.18.2-alpine
+FROM oven/bun
 
-# Create app directory
 WORKDIR /socket
 ADD . .
-
-# Install bun
-RUN npm install -g bun
-
-# Install app dependencies
 RUN bun install
 
-# Build the application
-RUN bun build
-
-# Expose application port
 EXPOSE 3001
-
-# Start the application
 ENTRYPOINT ["bun", "start"]
